Fix Create Activity
